fix notify service, fix hiding content behind footer

--- a/css/app-css.css
+++ b/css/app-css.css
@@ -38,3 +38,10 @@
 .navbar-inverse{
     border-radius: 0;
 }
+#issue-tracker-footer{
+    background-color: #333;
+    padding: 10px;
+}
+.main-element{
+    margin-bottom: 100px;
+}
